<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_detail"
    app:startDestination="@id/detail_movie">

    <fragment
        android:id="@+id/detail_movie"
        android:name="com.hendri.movie.catalogue.ui.fragments.DetailMovieFragment"
        tools:layout="@layout/fragment_detail_movie">
        <action
            android:id="@+id/detail_movie"
            app:destination="@id/detail_movie"
            app:launchSingleTop="true"
            app:popUpTo="@id/detail_movie"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/detail_tv_show"
        android:name="com.hendri.movie.catalogue.ui.fragments.DetailTvShowFragment"
        tools:layout="@layout/fragment_detail_tv_show">
        <action
            android:id="@id/detail_tv_show"
            app:destination="@id/detail_tv_show"
            app:launchSingleTop="true"
            app:popUpTo="@id/detail_tv_show"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>